--- a/examples/blog_example/views/post.html
+++ b/examples/blog_example/views/post.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>{{title}}</title>
+    <link rel="stylesheet" type="text/css" href="{{base}}/css/style.css"/>
 </head>
 <body>
 <div class="main">
